--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bulma": "^0.9.3",
     "core-js": "^3.15.1",
+    "firebase": "^8.9.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
