--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bulma": "^0.9.3",
     "core-js": "^3.15.1",
     "firebase": "^8.9.1",
+    "highlight.js": "^11.2.0",
+    "markdown-it": "^12.2.0",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
